<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fugliara.ccs002.views.login.CheckInviteActivity"
    android:background="@color/background_color" >

    <EditText
        android:id="@+id/editTextEmailInvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextNumberInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmailInvite"
        android:layout_alignLeft="@+id/editTextEmailInvite"
        android:layout_alignRight="@+id/editTextEmailInvite"
        android:layout_alignStart="@+id/editTextEmailInvite"
        android:layout_below="@+id/editTextEmailInvite"
        android:layout_marginBottom="40dp"
        android:hint="@string/code"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextNumberInvite"
        android:layout_centerHorizontal="true"
        android:text="@string/bt_validate"
        android:background="@color/button_color" />
</RelativeLayout>
