<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    android:background="@color/background_color"
    tools:context="com.example.fugliara.ccs002.views.itinerary.CreateRouteActivity">

    <EditText
        android:id="@+id/editTextFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/from"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFrom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/to"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonCreateByAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/bt_insert"
        android:background="@color/button_color" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Entre com o local de coleta e entrega das encomendas.\n\nExemplo de locais:\nAv Paulista; São Paulo; Brasil"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
