<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fugliara.ccs002.views.order.OrderActivity">

    <EditText
        android:id="@+id/editTextFromSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/from"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextToSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextFromSend"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/to"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRaio"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/bt_find_route"
        android:background="@color/button_color" />

    <ListView
        android:id="@+id/listViewFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSendOrder"
        android:layout_below="@+id/buttonFind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        tools:listitem="@android:layout/simple_list_item_1" />

    <Button
        android:id="@+id/buttonSendOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/send_order"
        android:background="@color/button_color" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Entre com o local de coleta e entrega da encomenda. Para requisitar o agendamento de um transporte. A distâmcia se refere ao raio usado para localizar rotas.\nExemplo de locais:\nAv Paulista; São Paulo; Brasil" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextRaio"
        android:layout_below="@+id/editTextToSend"
        android:layout_centerHorizontal="true"
        android:hint="Distância em Km"
        android:layout_marginTop="10dp" />
</RelativeLayout>
